# smart-home-fastapi

./: .gitignore  README.md  docker-compose.yml  presentation_of_the_final_qualification_work.pptx
auth-service/: .dev.env  .gitignore  .local.env  Makefile  README.md  alembic.ini  main.py  pyproject.toml
auth-service/api_v1/auth/: dependency.py  handler.py  schema.py  service.py  utils.py
auth-service/api_v1/profile/: dependency.py  service.py
auth-service/api_v1/session/: __init__.py  dependency.py  handler.py  model.py  repository.py  schema.py  service.py
auth-service/api_v1/user/: __init__.py  dependency.py  handler.py  repository.py  schema.py  service.py
auth-service/api_v2/auth/: __init__.py  dependency.py  schema.py
auth-service/api_v2/profile/: model.py  repository.py  schema.py
auth-service/api_v2/session/: __init__.py  dependency.py  repository.py  service.py
auth-service/api_v2/user/: __init__.py  dependency.py  model.py  repository.py
auth-service/certs/: jwt-private.pem  jwt-public.pem
auth-service/config/: consume.py  database.py  pick_service.py  settings.py
auth-service/migrations/: env.py
auth-service/migrations/versions/: 2025_02_22_1849-8c50f9bb87d0_test_database.py  2025_02_22_2306-ee177fac97c4_create_user_database.py  2025_02_23_2353-264cebfba456_create_profile_user_session.py  2025_02_25_2242-b5dc43e9a0cc_ref_user_and_profile_link.py  2025_02_25_2250-b6bc1c426b55_add_user_id_in_session.py  2025_02_26_2345-18708dff676c_change_user_schema.py  2025_02_26_2350-2b8ee2343b79_change_user_schema.py  2025_02_27_0013-ae239cd67142_change_user_password_on_largebinary.py  2025_03_01_2315-9480939e9bba_change_user_password_on_largebinary.py  2025_03_02_0034-54f7d1daccc5_ref_uniq_id_session.py  2025_04_05_2342-a6ef9e3c5d2e_create_tables.py  2025_05_14_2240-3e19c8f004ec_new_field_in_session.py  (+4 more)
gateway-service/: .prod.env  Makefile  main.py  pyproject.toml  settings.py
gateway-service/api_v1/: __init__.py
gateway-service/config/: broker.py
ml-IoT-service/: Makefile  calc.py  face_encodings.pkl  main.py  pyproject.toml
notification-service/: .dev.env  .prod.env  Makefile  alembic.ini  main.py  pyproject.toml
notification-service/config/: base_model.py  broker.py  consume.py  pick_service.py  settings.py
notification-service/migrations/: env.py
smart-home-service/: .dev.env  .local.env  Makefile  alembic.ini  main.py  pyproject.toml
smart-home-service/api_v1/: __init__.py
smart-home-service/config/: __init__.py  consume.py  database.py  pick_service.py  settings.py
smart-home-service/db/: Dockerfile
smart-home-service/migrations/: env.py  script.py.mako
(+81 files in other folders)
