[project]
name = "gateway-service"
version = "0.1.0"
description = ""
authors = [
    {name = "d_tareev@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "email-validator (>=2.2.0,<3.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
