[project]
name = "fastapi-fcm-service"
version = "0.1.0"
description = "Сервис отправки уведомлений"
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "firebase-admin (>=6.8.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
