[project]
name = "smart-home-service"
version = "0.1.0"
description = ""
authors = [
    {name = "donuwave",email = "d_tareev@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
